--- a/jobs/templates/jobs/register.html
+++ b/jobs/templates/jobs/register.html
@@ -1,6 +1,9 @@
+{% extends 'jobs/base_auth.html' %} {% block title %}Register | ConnectD{%
+endblock %} {% block content %}
 <h2>Register</h2>
 <form method="POST">
-{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Register</button>
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Register</button>
 </form>
+<a class="switch-link" href="/login/">Already have an account? Login</a>
+{% endblock %}
