--- a/jobs/templates/jobs/login.html
+++ b/jobs/templates/jobs/login.html
@@ -1,6 +1,9 @@
+{% extends 'jobs/base_auth.html' %} {% block title %}Login | ConnectD{% endblock
+%} {% block content %}
 <h2>Login</h2>
 <form method="POST">
-{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Login</button>
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Login</button>
 </form>
+<a class="switch-link" href="/register/">Don't have an account? Register</a>
+{% endblock %}
