--- a/jobs/static/jobs/home.css
+++ b/jobs/static/jobs/home.css
@@ -12,7 +12,7 @@ body {
     0% {background-position: 0% 50%;}
     50% {background-position: 100% 50%;}
     100% {background-position: 0% 50%;}
-}
+}v 
 
 .container {
     background: rgba(255,255,255,0.92);
